# pbshm-framework

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml  test-dependencies.yml
containers/: Caddyfile  Containerfile  Containerfile.caddy  Containerfile.framework  Containerfile.j2  Containerfile.mongodb  Containerfile.monolithic  Containerfile.supervisor  __init__.py  apply-templates.py  compose.yml  entrypoint-framework.sh  entrypoint-mongodb.sh  entrypoint.sh  generate-matrix.py  supervisor-framework.conf  supervisor-mongodb.conf  supervisord.conf  versions.json  versions.py
containers/assets/: Caddyfile  entrypoint-gunicorn.sh  supervisor-caddy.conf  supervisor-mongodb.conf
monolithic-container/: Caddyfile  Containerfile  flask-startup.sh  supervisord.conf
rosehips/: __init__.py
rosehips/layout/: __init__.py  layout.py
rosehips/layout/static/: style.css
rosehips/layout/templates/: base.html  home.html  portal.html
rosehips/sideloader/: __init__.py  sideloader.py
rosehips/sideloader/static/: sideload.json
rosehips/sideloader/templates/: sideload-modules.html
