[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pbshm-framework"
version = "0.7"
authors = [
    { name = "Dan Brennan", email = "d.s.brennan@sheffield.ac.uk" }
]
description = "PBSHM Framework"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Framework :: Flask"
]
requires-python = ">=3.11"
dependencies = [
    "pbshm-core == 1.1.6",
    "pbshm-channel-toolbox == 0.1.4",
    "pbshm-ie-toolbox == 0.1.4",
    "pbshm-network-mcs == 0.1.1",
    "pbshm-ie-visualiser == 1.0"
]

[project.urls]
homepage = "https://github.com/dynamics-research-group/pbshm-framework"

[tool.setuptools.packages.find]
exclude = ["instance"]
